ex3/GPU_3d/error/width256_height256_depth256_gpu2_iter1000_compare1_overlap0_test0_dgx2q.err
main.cu(55): warning #177-D: variable "warp_size" was declared but never referenced

main.cu: In function ‘void initialization(int, int, int, int, double, double, double, int, int, int, int, dim3, dim3)’:
main.cu:185:19: warning: ‘%i’ directive writing between 1 and 11 bytes into a region of size 0 [-Wformat-overflow=]
  185 |         sprintf(filename, "../CPU_3d/matrices/CPUMatrix%i_%i_%i.txt", width, height, depth);
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cu:185:8: note: ‘sprintf’ output between 38 and 68 bytes into a destination of size 30
  185 |         sprintf(filename, "../CPU_3d/matrices/CPUMatrix%i_%i_%i.txt", width, height, depth);
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
programs/jacobi.cu(11): error: identifier "threadSize" is undefined

programs/jacobi.cu(13): error: identifier "threadID" is undefined

programs/jacobi.cu(9): warning #177-D: variable "division" was declared but never referenced

programs/jacobi.cu(36): error: no suitable conversion function from "cooperative_groups::__v1::grid_group" to "int" exists

programs/jacobi.cu(36): error: no suitable constructor exists to convert from "int" to "cooperative_groups::__v1::grid_group"

programs/jacobi.cu(36): error: too few arguments in function call

programs/jacobi.cu(40): error: no suitable conversion function from "cooperative_groups::__v1::grid_group" to "int" exists

programs/jacobi.cu(40): error: no suitable constructor exists to convert from "int" to "cooperative_groups::__v1::grid_group"

programs/jacobi.cu(40): error: too few arguments in function call

programs/jacobi.cu(47): error: no suitable conversion function from "cooperative_groups::__v1::grid_group" to "int" exists

programs/jacobi.cu(47): error: no suitable constructor exists to convert from "int" to "cooperative_groups::__v1::grid_group"

programs/jacobi.cu(47): error: too few arguments in function call

programs/jacobi.cu(48): error: no suitable conversion function from "cooperative_groups::__v1::grid_group" to "int" exists

programs/jacobi.cu(48): error: no suitable constructor exists to convert from "int" to "cooperative_groups::__v1::grid_group"

programs/jacobi.cu(48): error: too few arguments in function call

programs/jacobi.cu(53): error: no suitable conversion function from "cooperative_groups::__v1::grid_group" to "int" exists

programs/jacobi.cu(53): error: no suitable constructor exists to convert from "int" to "cooperative_groups::__v1::grid_group"

programs/jacobi.cu(53): error: too few arguments in function call

programs/jacobi.cu(54): error: no suitable conversion function from "cooperative_groups::__v1::grid_group" to "int" exists

programs/jacobi.cu(54): error: no suitable constructor exists to convert from "int" to "cooperative_groups::__v1::grid_group"

programs/jacobi.cu(54): error: too few arguments in function call

20 errors detected in the compilation of "programs/jacobi.cu".
/cm/local/apps/slurm/var/spool/job145151/slurm_script: line 31: ./out_width256_height256_depth256_gpu2_iter1000_compare1_overlap0_test0_dgx2q: No such file or directory
